--- a/src/css/midiaQuery.css
+++ b/src/css/midiaQuery.css
@@ -16,6 +16,34 @@
         padding-bottom: 4rem;
     }
 
+    .name {
+        font-size: 4.2rem;
+        text-decoration: none;
+        transition: .2S ease-in-out;
+    }
+    
+    .name:hover {
+        text-shadow: var(--shadow-white-1);
+    }
+    
+    .funcao {
+        font-size: 2rem;
+        font-family: var(--font-medium);
+    }
+    
+    .funcao:hover {
+        text-shadow: var(--shadow-white-2);
+    }
+    
+    .sobre {
+        font-size: 1.2rem;
+        font-family: var(--font-medium);
+    }
+    
+    .sobre:hover {
+        text-shadow: var(--shadow-white-2);
+    }
+    
     .wrap {
         max-width: 1280px;
         width: 100%;
@@ -26,6 +54,12 @@
     .colum1 {
         grid-template-columns: 1fr 1fr;
         justify-items: end;
+    }
+
+    .logoTipo {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 1rem;
     }
 
     .imgLogoTipo {
@@ -123,7 +157,35 @@
 
     .bannerPage {
         display: flex;
-        justify-items: center;
+        padding: 2rem;
+    }
+    
+    .name {
+        font-size: 3rem;
+        text-decoration: none;
+        transition: .2S ease-in-out;
+    }
+    
+    .name:hover {
+        text-shadow: var(--shadow-white-1);
+    }
+    
+    .funcao {
+        font-size: 1.5rem;
+        font-family: var(--font-medium);
+    }
+    
+    .funcao:hover {
+        text-shadow: var(--shadow-white-2);
+    }
+    
+    .sobre {
+        font-size: 1rem;
+        font-family: var(--font-medium);
+    }
+    
+    .sobre:hover {
+        text-shadow: var(--shadow-white-2);
     }
 
     .wrap {
@@ -151,12 +213,6 @@
     .titleBanner {
         padding: 0px 1rem;
         justify-items: center;
-    }
-
-    .bannerPage {
-        padding: 2rem;
-        display: flex;
-        justify-content: start;
     }
 
     .colum1 {
