--- a/src/css/midiaQuery.css
+++ b/src/css/midiaQuery.css
@@ -144,6 +144,35 @@
         transition: .3s ease-in-out;
     }
 
+    .divAbout {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 28rem;
+        border-radius: 15px;
+        backdrop-filter: brightness(40%);
+        color: var(--cor-branco);
+        justify-content: center;
+        align-items: center;
+        transition: 3s ease-in-out;
+    }
+
+    .titleAbout {
+        font-size: 3rem;
+        cursor: default;
+        font-family: var(--font-medium);
+    }
+    
+    .divP {
+        text-align: center;
+        font-size: 1.5rem;
+        cursor: default;
+    }
+    
+    .linkWM {
+        color: var(--cor-amarelo);
+    }
+
     .gridProjects {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -279,6 +308,35 @@
         border-radius: 6px;
         margin-bottom: 10px;
         transition: .3s ease-in-out;
+    }
+
+    .divAbout {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 28rem;
+        border-radius: 15px;
+        backdrop-filter: brightness(40%);
+        color: var(--cor-branco);
+        justify-content: center;
+        align-items: center;
+        transition: 3s ease-in-out;
+    }
+
+    .titleAbout {
+        font-size: 2rem;
+        cursor: default;
+        font-family: var(--font-medium);
+    }
+    
+    .divP {
+        text-align: center;
+        font-size: 1rem;
+        cursor: default;
+    }
+    
+    .linkWM {
+        color: var(--cor-amarelo);
     }
 
 }
