grid projects update

--- a/src/css/midiaQuery.css
+++ b/src/css/midiaQuery.css
@@ -30,29 +30,29 @@
         text-decoration: none;
         transition: .2S ease-in-out;
     }
-    
+
     .name:hover {
         text-shadow: var(--shadow-white-1);
     }
-    
+
     .funcao {
         font-size: 2rem;
         font-family: var(--font-medium);
     }
-    
+
     .funcao:hover {
         text-shadow: var(--shadow-white-2);
     }
-    
+
     .sobre {
         font-size: 1.2rem;
         font-family: var(--font-medium);
     }
-    
+
     .sobre:hover {
         text-shadow: var(--shadow-white-2);
     }
-    
+
     .wrap {
         max-width: 1280px;
         width: 100%;
@@ -162,13 +162,13 @@
         cursor: default;
         font-family: var(--font-medium);
     }
-    
+
     .divP {
         text-align: center;
         font-size: 1.5rem;
         cursor: default;
     }
-    
+
     .linkWM {
         color: var(--cor-amarelo);
     }
@@ -197,31 +197,31 @@
         display: flex;
         padding: 2rem;
     }
-    
+
     .name {
         font-size: 3rem;
         text-decoration: none;
         transition: .2S ease-in-out;
     }
-    
+
     .name:hover {
         text-shadow: var(--shadow-white-1);
     }
-    
+
     .funcao {
         font-size: 1.5rem;
         font-family: var(--font-medium);
     }
-    
+
     .funcao:hover {
         text-shadow: var(--shadow-white-2);
     }
-    
+
     .sobre {
         font-size: 1rem;
         font-family: var(--font-medium);
     }
-    
+
     .sobre:hover {
         text-shadow: var(--shadow-white-2);
     }
@@ -328,15 +328,29 @@
         cursor: default;
         font-family: var(--font-medium);
     }
-    
+
     .divP {
         text-align: center;
         font-size: 1rem;
         cursor: default;
     }
-    
+
     .linkWM {
         color: var(--cor-amarelo);
     }
 
+    .gridProjects {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+
+}
+
+@media screen and (max-width: 510px) {
+    .gridProjects {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
 }
